--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,10 +61,7 @@ flutter:
   assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
-      - images/1.png
-      - images/2.jpg
-      - images/3.jpg
-
+      - images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
