--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,9 +61,8 @@ flutter:
   assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
-      - images/1.png
-      - images/2.jpg
-      - images/3.jpg
+      - assets/images/
+      - assets/icons/
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
