--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  line_icons:
+  flutter_icons:
+  fl_chart:
+  flutter_svg: ^0.22.0
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -38,6 +42,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
